[gd_scene load_steps=13 format=2]

[ext_resource path="res://gui/BaseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/gui/title_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/fonts/GROBOLD.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gui/TitleMenu.gd" type="Script" id=5]
[ext_resource path="res://gui/fonts/settings_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/gui/sprites/letter.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 8
outline_color = Color( 0.792157, 0.207843, 0.0745098, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 11
outline_color = Color( 0.792157, 0.207843, 0.0745098, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRow2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -710.0
margin_top = -299.0
margin_right = 710.0
margin_bottom = -149.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ButtonRow2"]
margin_right = 1420.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.803922, 0.458824, 1 )
text = "Captain Chirple in"
align = 1

[node name="Label2" type="Label" parent="ButtonRow2"]
margin_top = 80.0
margin_right = 1420.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
text = "The Hunt for Daltonga Island"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 71.1426
margin_bottom = 71.1426
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRow" type="VBoxContainer" parent="CenterContainer"]
margin_left = 767.0
margin_top = 420.0
margin_right = 1153.0
margin_bottom = 659.0

[node name="StartButton" parent="CenterContainer/ButtonRow" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 386.0
margin_bottom = 77.0
text = "Sail off!"

[node name="SettingsButton" parent="CenterContainer/ButtonRow" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 81.0
margin_right = 386.0
margin_bottom = 158.0
text = "Settings"

[node name="QuitButton" parent="CenterContainer/ButtonRow" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 162.0
margin_right = 386.0
margin_bottom = 239.0
text = "End the Journey"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 38.0
text = "Seed:"

[node name="SeedEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 101.0
margin_right = 251.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="SettingsPanel" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -265.0
margin_right = 452.0
margin_bottom = 265.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 77.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer"]
margin_right = 904.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 6 )
text = "The Captain
instructs the following:
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel/VBoxContainer"]
margin_top = 100.0
margin_right = 904.0
margin_bottom = 145.0
alignment = 1

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer/HBoxContainer"]
margin_left = 238.0
margin_top = 7.0
margin_right = 638.0
margin_bottom = 37.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="SettingsPanel/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 666.0
margin_bottom = 45.0

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsPanel/VBoxContainer"]
margin_top = 149.0
margin_right = 904.0
margin_bottom = 194.0
alignment = 1

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer/HBoxContainer2"]
margin_left = 238.0
margin_top = 7.0
margin_right = 638.0
margin_bottom = 37.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Sound"

[node name="CheckBox" type="CheckBox" parent="SettingsPanel/VBoxContainer/HBoxContainer2"]
margin_left = 642.0
margin_right = 666.0
margin_bottom = 45.0

[node name="Label2" type="Label" parent="SettingsPanel/VBoxContainer"]
margin_top = 198.0
margin_right = 904.0
margin_bottom = 275.0
text = "
"

[node name="CloseSettingsButton" parent="SettingsPanel" instance=ExtResource( 1 )]
margin_left = 295.0
margin_top = 391.0
margin_right = 576.0
margin_bottom = 468.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "It shall be"
[connection signal="button_up" from="CenterContainer/ButtonRow/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_up" from="CenterContainer/ButtonRow/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="CenterContainer/ButtonRow/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="SettingsPanel/CloseSettingsButton" to="." method="_on_CloseSettingsButton_button_up"]
